# scribe-academic-writer

./: .gitignore  README.md  academic_writing_rules (1).md  academic_writing_rules_unified.md  pyproject.toml  scribe_spec.md
scripts/: Scribe.spec  build_exe.py
src/scribe/: __init__.py  __main__.py  cli.py  config.py  diff.py  expansion.py  export.py  git.py  launcher.py  models.py  project.py  revision.py  sdk.py  state.py  tokens.py
src/scribe/parsers/: docx.py  outline.py  pdf.py  refs.py  sections.py  xlsx.py
src/scribe/resources/: default_style.md
src/scribe/stages/: auditor.py  executor.py  expander.py  expander_planner.py  planner.py  prompts.py  reviewer.py  reviser.py  revision_stitcher.py  stitcher.py
src/scribe/tui/: components.py  progress.py  review.py
src/scribe/web/: app.py
src/scribe/web/static/: style.css
src/scribe/web/templates/: base.html  dashboard.html  expand.html  help.html  index.html  new_project.html  project.html  restyle.html  revise.html
