[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe"
version = "0.1.0"
description = "Chunked long-form writing tool powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "flask>=3.0",
]

[project.scripts]
scribe = "scribe.cli:app"
scribe-desktop = "scribe.launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]
